# DS102024

./: Idea EDA  pyproject.toml
1-RampUp/2-Markdown/Teoria/: Markdown_en_Jupyter.ipynb
2-DataAnalysis/0-Matematicas/1_Vectores/: vectores.ipynb
2-DataAnalysis/0-Matematicas/3_Probabilidad&Estadistica/: 0-Estadistica.ipynb
2-DataAnalysis/1-Numpy/Teoria/: 0-Introduccion-a-NumPy.ipynb
3-MachineLearning/2-Supervisado/1-Clasificacion/: 1-Clasificacion.ipynb
3-MachineLearning/2-Supervisado/1-Clasificacion/Practica/: 1 Jose-logistic_regression_df_class copia.ipynb
3-MachineLearning/2-Supervisado/2-RegresionLineal/Ejercicio/: regresion_ls_ejercicios.ipynb
3-MachineLearning/2-Supervisado/7-TimeSeries/Teoria/: 1-ARIMA_SARIMAX.ipynb
3-MachineLearning/2-Supervisado/Ejercicios/: Practica2.ipynb  train copy.csv
3-MachineLearning/2-Supervisado/Ejercicios/PruebaTecnica/: EDAyML_Jose-1.ipynb
3-MachineLearning/2-Supervisado/Ejercicios/data/: Submission-1 copy.ipynb  sample_submission copy.csv  test copy.csv
3-MachineLearning/7-DeepLearning/3-NLP/NLTK&CountVectorizer/: 1_IMDB_sentiment_analysis.ipynb
env-deep/: pyproject.toml
